--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: pholster <pholster@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2019/01/07 20:00:45 by pholster       #+#    #+#                 #
-#    Updated: 2019/08/22 13:37:54 by pholster      ########   odam.nl          #
+#    Updated: 2019/08/22 18:58:53 by pholster      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,6 +17,7 @@ SUBLIBS = printf threadpool unsignednumber number numberarray float character \
 #Libft name
 NAME = libft.a
 BASENAME = $(NAME:%.a=%)
+PARENTNAME = $(BASENAME)
 
 #Compile settings
 CCSILENT = FALSE
@@ -27,6 +28,11 @@ CCOPTIMISE =
 GCOV = FALSE
 GCOVSILENT = TRUE
 GCOVFLAGS = -f -b -c
+LIBFT_DISABLE_GCOV = FALSE
+
+#Libft info
+LIBPATH =
+LIB =
 
 #Mafile includes
 MAKEINCLUDES = includes/
@@ -34,13 +40,14 @@ include $(MAKEINCLUDES)/Makefile.color
 
 #Tests info
 TESTPATH = tests
-TEST = $(TESTPATH)/libtest
+TESTNAME = libtest
+TEST = $(TESTPATH)/$(TESTNAME)
 
 #Sublib info
 SUBLIBSPATH = .sublibs
 SUBLIBS := $(sort $(SUBLIBS))
 SUBLIBS := $(SUBLIBS:%=src/$(SUBLIBSPATH)/%.a)
-SUBLIBMAKE = $(MAKE) -s -e -C src LIBNAME=$(BASENAME) FOLDER=$(SUBLIBSPATH)
+SUBLIBMAKE = $(MAKE) -s -e -C src FOLDER=$(SUBLIBSPATH)
 
 #Fclean target files
 FCLEAN := $(wildcard $(NAME) $(SUBLIBS))
@@ -65,50 +72,59 @@ export GCOVFLAGS
 export CCSILENT
 export CCSTRICT
 export CCOPTIMISE
+export PARENTNAME
+export LIBFT_DISABLE_GCOV
 
 all: $(NAME)
 
 #Create $(NAME)
-$(NAME): $(SUBLIBS)
+$(NAME): $(SUBLIBS) $(LIB)
 	@$(call FNC_PRINT_EQUAL,$(BASENAME),$(NAME))
 	@rm -f $(NAME)
-	@ar rcs $(NAME) $(OBJS)
+	@ar rcs $(NAME) $(OBJS) $(LIB)
 
 #Run test and gcov if $(GCOV)==TRUE
 test: $(NAME) FORCE
 ifeq ($(wildcard $(TESTPATH)),)
 	@echo "Error: $(TESTPATH) not present"
 else
-	@$(MAKE) -s -e -C $(TESTPATH)
+	@$(MAKE) -s -e -C $(TESTPATH) NAME=$(TESTNAME) OBJS="$(OBJS:src/%=../src/%)"
 	@./$(TEST)
-ifeq ($(GCOV), TRUE)
+ifeq ($(GCOV)&&$(LIBFT_DISABLE_GCOV), TRUE&&FALSE)
 	@$(SUBLIBS_GCOV)
 endif
 endif
+
+#Compile $(LIB)
+$(LIB): FORCE
+	@$(MAKE) -s -e -C $(LIBPATH)
 
 #Compile $(SUBLIBS)
 src/$(SUBLIBSPATH)/%.a: src/$(SUBLIBSPATH) FORCE
 	@$(SUBLIBMAKE) SUBLIB=$(@:src/$(SUBLIBSPATH)/%=%)
 
+#Create $(SUBLIBSPATH) if it doesnt exsist
 src/$(SUBLIBSPATH):
 	@mkdir src/$(SUBLIBSPATH)
 
 #Clean all non .a files
 clean:
 ifneq ($(wildcard $(TESTPATH)),)
-	@$(MAKE) -s -C $(TESTPATH) clean
+	@$(MAKE) -s -e -C $(TESTPATH) NAME=$(TESTNAME) clean
 endif
 	@$(SUBLIBS_CLEAN)
+	#@$(MAKE) -s -e -C $(LIBPATH) clean
 
 #Clean all .a files
 fclean: clean
 ifneq ($(wildcard $(TESTPATH)),)
-	@$(MAKE) -s -C $(TESTPATH) fclean
+	@$(MAKE) -s -e -C $(TESTPATH) NAME=$(TESTNAME) fclean
 endif
 ifneq ($(FCLEAN),)
 	@$(call FNC_PRINT_DEL,$(BASENAME),fclean $(FCLEAN:src/$(SUBLIBSPATH)/%=%))
 	@rm -f $(NAME) $(SUBLIBS)
 endif
+	#@$(MAKE) -s -e -C $(LIBPATH) fclean
 
 #Recompile
 re: fclean $(NAME)
