--- a/libft/src/Makefile.listSrcs
+++ b/libft/src/Makefile.listSrcs
@@ -6,7 +6,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS = $(SRCFOLDER)
+HEADERS =
 HEADERS := $(HEADERS:%=ft_%.h)
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
@@ -21,7 +21,7 @@ FT_SRCS = lstadd lstaddbck lstdel lstdelmem lstdelone lstdup lstdupone \
 	lstfind_content lstfind_size lstfindadd_content lstfindadd_size lstindex \
 	lstinsert lstiter lstlast lstlen lstmap lstnew lstnlen lstrev lstsort \
 	lstsortrev lstsortstrac lsttonumarr lsttostrarr lstunlink putlstsize \
-	putnumlst putstrlst
+	putnumlst putstrlst lstnew_dup
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
