--- a/src/Makefile.mainSrcs
+++ b/src/Makefile.mainSrcs
@@ -6,8 +6,8 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS =
-HEADERS := $(HEADERS:%=ft_%.h)
+HEADERS = init
+HEADERS := $(HEADERS:%=%.h)
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
 CCFLAGS +=
@@ -17,8 +17,8 @@ PREFIX =
 
 # All ft_ source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with ft_ and sufixed with .c
-FT_SRCS = main
+FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS =
+SRCS = main init error loop
