Adding Travis with Testing support

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ notifications:
   email: false
   slack: true
 
+env:
+  global:
+    - CODECOV_TOKEN="749f156c-d5c7-425f-a226-c52fac07344c"
+
 branches:
   only:
     - master
