Sdl surface merge (#13)
* Adding initial SurfaceMerge Function

* Adding struct s_pixel

* Adding (unoptimized) versions of surface merge and surface merge alpha

* renaming file

* Updating vs Settings

* Pulling aparts surface merge into seperate libararies

* Formatting

* Adding color testing

* Adding initsize defines

* Revamped faster version of surface_merge_alpha

* Norminette

* renaming testmains

* Improving speed on surface merge alpha

* Update settings.json

* Hotfix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,19 @@
 {
     "files.associations": {
+        "*.mainSrcs": "makefile",
         "sdl.h": "c",
         "error.h": "c",
         "game.h": "c",
         "libft.h": "c",
-        "init.h": "c"
+        "init.h": "c",
+        "locale": "c",
+        "string": "c",
+        "time.h": "c",
+        "coord.h": "c",
+        "color.h": "c",
+        "Makefile*": "makefile",
+        "criterion.h": "c",
+        "ios": "c",
+        "test.h": "c"
     }
 }
