Map branch Init

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ doomtest
 
 # Linker output
 *.ilk
-*.map
 *.exp
 
 # Precompiled Headers
@@ -59,3 +58,5 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+personal.h
