--- a/src/Makefile.sdl_extraSrcs
+++ b/src/Makefile.sdl_extraSrcs
@@ -21,4 +21,6 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = sdl_surface_merge sdl_surface_merge_alpha sdl_surface_draw_rect sdl_surface_draw_rect_alpha
+SRCS =	sdl_merge_surface sdl_merge_surface_alpha \
+		sdl_draw_surface_rect sdl_draw_surface_rect_alpha \
+		sdl_draw_surface_circ
