--- a/src/Makefile.mapSrcs
+++ b/src/Makefile.mapSrcs
@@ -6,7 +6,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS = 
+HEADERS = map player
 HEADERS := $(HEADERS:%=%.h)
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
@@ -21,4 +21,4 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = 
+SRCS = init_map
