--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,15 +15,21 @@
         "criterion.h": "c",
         "ios": "c",
         "test.h": "c",
+        "memory": "c",
         "tga.h": "c",
         "unistd.h": "c",
         "io.h": "c",
+        "sdl_extra.h": "c",
+        "gui.h": "c",
         "sdl_pixels.h": "c",
         "sdl_surface.h": "c",
         "sdl_rect.h": "c",
         "stdint.h": "c",
         "_uint32_t.h": "c",
         "sdl_keycode.h": "c",
-        "sdl_video.h": "c"
+        "sdl_video.h": "c",
+        "algorithm": "c",
+        "cmath": "c",
+        "complex": "c"
     }
 }
