--- a/src/Makefile.sdl_threadSrcs
+++ b/src/Makefile.sdl_threadSrcs
@@ -6,7 +6,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS = sdl_extra error color shape types gui
+HEADERS = sdl_thread error
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
 CCFLAGS +=
@@ -20,10 +20,6 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS =	merge_surface merge_surface_alpha \
-		draw_surface_rect draw_surface_rect_alpha draw_surface_circ \
-		merge_surface_scaled merge_surface_alpha_scaled \
-		merge_surface_center merge_surface_alpha_center \
-		create_surface_default clear_surface \
-		fill_surface_color has_surface_alpha
+SRCS = del_pool done_pool join_pool manage_thread new_pool new_task new_thread \
+	que_pool_back que_pool_front que_pool run_task
 SRCS := $(SRCS:%=sdl_%)
