--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,49 +1,7 @@
 {
     "files.associations": {
-		"*.mainSrcs": "makefile",
 		"*.h": "c",
 		"Makefile.*": "makefile",
-		"sdl.h": "c",
-		"error.h": "c",
-		"game.h": "c",
-		"libft.h": "c",
-		"init.h": "c",
-		"locale": "c",
-		"string": "c",
-		"time.h": "c",
-		"coord.h": "c",
-		"color.h": "c",
-		"Makefile*": "makefile",
-		"criterion.h": "c",
-		"ios": "c",
-		"test.h": "c",
-		"memory": "c",
-		"tga.h": "c",
-		"unistd.h": "c",
-		"io.h": "c",
-		"sdl_extra.h": "c",
-		"gui.h": "c",
-		"sdl_pixels.h": "c",
-		"sdl_surface.h": "c",
-		"sdl_rect.h": "c",
-		"stdint.h": "c",
-		"_uint32_t.h": "c",
-		"sdl_keycode.h": "c",
-		"sdl_video.h": "c",
-		"algorithm": "c",
-		"cmath": "c",
-		"complex": "c",
-		"iterator": "c",
-		"__locale": "c",
-		"list": "c",
-		"sstream": "c",
-		"bitset": "c",
-		"slist": "c",
-		"__split_buffer": "c",
-		"__tree": "c",
-		"initializer_list": "c",
-		"map": "c",
-		"utility": "c",
-		"vector": "c"
+		"iterator": "c"
 	}
 }
