--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ matrix:
   fast_finish: true
 
 install:
-  - bash .travisInstall.bash
+  - bash ./travis/install.bash
 
 script:
-  - bash .travisScript.bash
+  - bash ./travis/run.bash
 
 after_success:
   - bash <(curl -s https://codecov.io/bash) -X gcov
