--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
 		"*.h": "c",
+		"sdl2_mixer": "ruby",
 		"Makefile.*": "makefile",
-		"iterator": "c"
+		"iterator": "c",
+		"cerrno": "c"
 	}
 }
