--- a/src/Makefile
+++ b/src/Makefile
@@ -18,6 +18,7 @@ FRAMEWORKPATH =
 FRAMEWORKINCLUDES =
 SDL2LIB =
 SDL2TTF =
+SDL2MIX =
 
 # Input values for compile (From parrent makefile)
 CCSILENT =
@@ -109,7 +110,8 @@ endif
 fclean: clean
 
 # Recompile
-re: clean all
+re: fclean
+	$(MAKE)
 
 FORCE: ;
 
