--- a/src/Makefile.sdl_threadSrcs
+++ b/src/Makefile.sdl_threadSrcs
@@ -21,5 +21,6 @@ FT_SRCS =
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
 SRCS = del_pool done_pool join_pool manage_thread new_pool new_task new_thread \
-	que_pool_back que_pool_front que_pool run_task
+	manage_thread_worker que_pool_back que_pool_front que_pool run_task \
+	manage_thread_central complete_task
 SRCS := $(SRCS:%=sdl_%)
