--- a/src/Makefile.serializerSrcs
+++ b/src/Makefile.serializerSrcs
@@ -6,7 +6,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS = init game error gui serializer
+HEADERS = serializer
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
 CCFLAGS +=
@@ -20,4 +20,8 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = main init error_msg loop splash quit error_msg_sdl error_msg_errno
+SRCS = write_struct read_struct add_type add_char add_short add_int add_long \
+		add_float add_double read_short read_char read_int read_long \
+		read_float read_double finish_bin add_string read_string add_list_gen \
+		read_list_gen detect_endian swap_bytes new_binary del_binary \
+		del_binary_read new_binary_read read_header
