--- a/libft/src/Makefile
+++ b/libft/src/Makefile
@@ -27,7 +27,7 @@ GCOVFLAGS =
 LIBFT_DISABLE_GCOV =
 
 # Own names
-SRCFOLDER = $(SUBLIB:%.a=%)
+SRCFOLDER = $(SUBLIB:%.content=%)
 NAME = $(FOLDER)/$(SUBLIB)
 
 # Misc setup
@@ -48,10 +48,10 @@ endif
 include Makefile.$(SRCFOLDER)Srcs
 
 # Dependency prefix
-HEADERS := $(HEADERS:%=$(INCLUDES)/%.h)
-HEADERS := $(sort $(HEADERS))
-SRCS := $(FT_SRCS:%=$(SRCFOLDER)/ft_%.c) $(SRCS:%=$(SRCFOLDER)/$(PREFIX)_%.c)
+SRCS := $(FT_SRCS:%=$(SRCFOLDER)/ft_%.c) $(SRCS:%=$(SRCFOLDER)/$(PREFIX)%.c)
 SRCS := $(sort $(SRCS))
+HEADERS := $(HEADERS:%=$(INCLUDES)/%.h)
+HEADERS += $(shell ./get_headers $(INCLUDES) $(SRCS))
 
 # Compile dependencys
 OBJS = $(SRCS:.c=.o)
@@ -79,8 +79,8 @@ all: $(NAME)
 # Create $(NAME)
 $(NAME): $(COMPILE_FILES)
 	@$(call FNC_PRINT_EQUAL,$(PARENTNAME)-$(SRCFOLDER),$(SUBLIB))
-	@rm -f $(NAME)
-	@ar rcs $(NAME) $(OBJS)
+	@mkdir -p $(FOLDER)
+	@echo $(OBJS:%=\\n%) > $(NAME)
 
 # Run gcov
 gcovreport: $(NAME)
@@ -89,12 +89,12 @@ gcovreport: $(NAME)
 # Compile .o or .gcno if $(GCOV)==TRUE
 %.o %.gcno: %.c $(HEADERS)
 ifeq ($(CCSILENT), FALSE)
-	@$(call FNC_PRINT_PLUS,$(PARENTNAME)-$(SRCFOLDER),$(shell basename $@))
+	@$(call FNC_PRINT_PLUS,$(PARENTNAME)-$(SRCFOLDER),$(@:$(SRCFOLDER)/%=%))
 endif
 	@rm -f $(<:.c=.o)
 	@$(CC) $(CCFLAGS) -o $(<:.c=.o) -c $<
 
-# Clean all non .a files
+# Clean all non .content files
 clean:
 ifneq ($(wildcard $(OBJS) $(TEMPS) $(GCOVS) $(GCDAS) $(GCNOS)),)
 	@$(call FNC_PRINT_MIN,$(PARENTNAME)-$(SRCFOLDER),clean)
@@ -105,8 +105,9 @@ endif
 fclean: clean
 
 # Recompile
-re: clean all
+re: clean
+	@$(MAKE)
 
 FORCE: ;
 
-.PHONY: gcovreport all clean re
+.PHONY: gcovreport all clean fclean re FORCE
