--- a/libft/src/Makefile.charSrcs
+++ b/libft/src/Makefile.charSrcs
@@ -6,7 +6,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS = $(SRCFOLDER) bool types mem str
+HEADERS =
 HEADERS := $(HEADERS:%=ft_%)
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
@@ -18,8 +18,9 @@ PREFIX =
 # All ft_ source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with ft_ and sufixed with .c
 FT_SRCS = chrdin chrdindex chrin chrinbytes chrindex chrnin chrsetbytes \
-	chrtostr getchar isalnum isalpha isascii isblank isdigit ishex islower isprint \
-	isspace isupper putchar putchar_fd putnchar putnchar_fd tolower toupper
+	chrtostr getchar isalnum isalpha isascii isblank isdigit islower isprint \
+	isspace isupper putchar putchar_fd putnchar putnchar_fd tolower toupper \
+	ishex
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
