Makefile header detection (#42)
* Adding Automatic Header detection

* Small Optimsation

* Slight optimastions

* fixing re

* small optimsation

* New c get_headers

* removing accendental .content

* fixing naming convension for is(type)str functions

* removed get_headers global

* syncing with libft

* overwrite master libft

* adding get_headers executable to gitignore

* removing useless header dependency

* adding back asking_qeustions

--- a/tests/Makefile.testSrcs
+++ b/tests/Makefile.testSrcs
@@ -5,7 +5,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to includes or .)
-HEADERS = init.h
+HEADERS =
 
 # Additions to the compile flags
 CCFLAGS +=
