--- a/tests/makefile
+++ b/tests/makefile
@@ -53,13 +53,12 @@ ifeq ($(shell uname -s), Linux)
 LIBS += -lm
 endif
 
-# Header dependency
-HEADERS := $(HEADERS:%=$(INCLUDES)/%)
-HEADERS := $(sort $(HEADERS))
-
 # Dependency prefix
 SRCS := $(SRCS:%=src/test_ft_%.c)
 SRCS := $(sort $(SRCS))
+HEADERS := $(HEADERS:%=$(INCLUDES)/%.h)
+HEADERS += $(shell ./../libft/src/get_headers $(INCLUDES) $(SRCS))
+
 TESTOBJS = $(SRCS:.c=.o)
 LIBOBJS = $(filter-out ../src/main/main.o, $(OBJS))
 
@@ -105,4 +104,4 @@ re: fclean
 
 FORCE: ;
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re FORCE
