--- a/src/Makefile.sdl_extraSrcs
+++ b/src/Makefile.sdl_extraSrcs
@@ -20,5 +20,6 @@ SRCS =	merge_surface merge_surface_alpha \
 		draw_surface_rect draw_surface_rect_alpha draw_surface_circ \
 		merge_surface_scaled merge_surface_alpha_scaled \
 		merge_surface_center merge_surface_alpha_center \
+		merge_surface_repeat merge_surface_alpha_repeat \
 		create_surface_default clear_surface \
 		fill_surface_color has_surface_alpha set_surface_alpha
