--- a/src/Makefile.mapSrcs
+++ b/src/Makefile.mapSrcs
@@ -6,8 +6,7 @@
 # $(CCFLAGS) = All the flags that will be used to compile
 
 # Headers libary is dependent on (relative to $(INCLUDES))
-HEADERS = map player
-HEADERS := $(HEADERS:%=%.h)
+HEADERS =
 
 # Additions to the compile flags (-Wall -Wextra -Werror allready included)
 CCFLAGS +=
