Adding sdl_set_surface_color (#46)

--- a/src/Makefile.sdl_extraSrcs
+++ b/src/Makefile.sdl_extraSrcs
@@ -22,4 +22,5 @@ SRCS =	merge_surface merge_surface_alpha \
 		merge_surface_center merge_surface_alpha_center \
 		merge_surface_repeat merge_surface_alpha_repeat \
 		create_surface_default clear_surface \
-		fill_surface_color has_surface_alpha set_surface_alpha
+		fill_surface_color has_surface_alpha set_surface_alpha \
+		set_surface_color
