rounding text color (#48)
* rounding text color

* re adding include that has TEXT_ALPHA_ROUND

--- a/src/Makefile.guiSrcs
+++ b/src/Makefile.guiSrcs
@@ -39,6 +39,7 @@ DRAW_SRCS = draw_gui \
 		draw_elem \
 		draw_button \
 		draw_image \
+		render_text \
 		draw_text \
 		draw_panel
 DRAW_SRCS := $(DRAW_SRCS:%=draw/%)
