--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,10 @@
 		"__locale": "c",
 		"functional": "c",
 		"typeinfo": "c",
-		"ios": "c"
+		"ios": "c",
+		"algorithm": "c",
+		"chrono": "c",
+		"limits": "c",
+		"ratio": "c"
 	}
 }
