--- a/src/Makefile.mainSrcs
+++ b/src/Makefile.mainSrcs
@@ -16,4 +16,5 @@ PREFIX =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = main init error_msg loop splash quit error_msg_sdl error_msg_errno
+SRCS = main init error_msg loop splash quit error_msg_sdl error_msg_errno \
+		loader
