--- a/src/Makefile.rendererSrcs
+++ b/src/Makefile.rendererSrcs
@@ -20,4 +20,5 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = render_3d load_textures get_texture
+SRCS = render_3d load_textures get_texture render_rooms get_walls_from_sector \
+		get_bunches
