--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-# Input values for sublib (From parrent makefile)
+# Input values for sublib (From parent makefile)
 SUBLIB =
 FOLDER =
 PARENTNAME =
@@ -20,12 +20,12 @@ SDL2LIB =
 SDL2TTF =
 SDL2MIX =
 
-# Input values for compile (From parrent makefile)
+# Input values for compile (From parent makefile)
 CCSILENT =
 CCSTRICT =
 CCOPTIMISE =
 
-# Input values for gcov (From parrent makefile)
+# Input values for gcov (From parent makefile)
 GCOV =
 GCOVSILENT =
 GCOVFLAGS =
@@ -55,13 +55,13 @@ include Makefile.$(SRCFOLDER)Srcs
 # Dependency prefix
 SRCS := $(SRCS:%=$(SRCFOLDER)/$(PREFIX)%.c)
 SRCS := $(sort $(SRCS))
-HEADERS := $(HEADERS:%=$(INCLUDES)/%.h)
-HEADERS += $(shell ./../libft/src/get_headers $(INCLUDES) $(SRCS))
 
-# Compile dependencys
+# Compile dependencies
 OBJS = $(SRCS:.c=.o)
 GCNOS = $(OBJS:.o=.gcno)
-COMPILE_FILES = $(OBJS)
+DEPS = $(OBJS:.o=.d)
+
+COMPILE_FILES = $(OBJS) $(DEPS)
 ifeq ($(GCOV), TRUE)
 COMPILE_FILES += $(GCNOS)
 endif
@@ -70,6 +70,7 @@ endif
 GCDAS = $(OBJS:.o=.gcda)
 TEMPS = $(SRCS:.c=.c~)
 GCOVS = $(OBJS:.o=.c.gcov)
+CLEAN_FILES = $(OBJS) $(DEPS) $(TEMPS) $(GCOVS) $(GCDAS) $(GCNOS)
 
 # Function - Gcov report
 BASE_GCOVS = $(GCOVS:$(SRCFOLDER)/%=%)
@@ -90,19 +91,22 @@ $(NAME): $(COMPILE_FILES)
 gcovreport: $(NAME)
 	@$(GCOVREPORT)
 
-# Compile .o or .gcno if $(GCOV)==TRUE
-%.o %.gcno: %.c $(HEADERS)
+# Include all existing header dependencies files
+include $(wildcard $(DEPS))
+
+# Compile .o, .d or .gcno if $(GCOV)==TRUE
+%.o %.d %.gcno: %.c
 ifeq ($(CCSILENT), FALSE)
 	@$(call FNC_PRINT_PLUS,$(PARENTNAME)-$(SRCFOLDER),$(@:$(SRCFOLDER)/%=%))
 endif
 	@rm -f $(<:.c=.o)
-	@$(CC) $(CCFLAGS) -o $(<:.c=.o) -c $<
+	@$(CC) -MMD $(CCFLAGS) -o $(<:.c=.o) -c $<
 
 # Clean all non .content files
 clean:
-ifneq ($(wildcard $(OBJS) $(TEMPS) $(GCOVS) $(GCDAS) $(GCNOS)),)
+ifneq ($(wildcard $(CLEAN_FILES)),)
 	@$(call FNC_PRINT_MIN,$(PARENTNAME)-$(SRCFOLDER),clean)
-	@rm -f $(OBJS) $(TEMPS) $(GCOVS) $(GCDAS) $(GCNOS)
+	@rm -f $(CLEAN_FILES)
 endif
 
 # Norm fclean
