--- a/tests/makefile
+++ b/tests/makefile
@@ -56,29 +56,35 @@ endif
 # Dependency prefix
 SRCS := $(SRCS:%=src/test_ft_%.c)
 SRCS := $(sort $(SRCS))
-HEADERS := $(HEADERS:%=$(INCLUDES)/%.h)
-HEADERS += $(shell ./../libft/src/get_headers $(INCLUDES) $(SRCS))
 
 TESTOBJS = $(SRCS:.c=.o)
 LIBOBJS = $(filter-out ../src/main/main.o, $(OBJS))
+TESTDEPS = $(OBJS:.o=.d)
+
+TESTCOMPILE_FILES = $(TESTOBJS) $(TESTDEPS)
+
 
 # Trash files
 TEMPS = $(SRCS:.c=.c~)
+TESTCLEAN_FILES = $(TESTOBJS) $(DEPS) $(TEMPS)
 
 all: $(NAME)
 
 # Create $(NAME)
-$(NAME): $(TESTOBJS) $(LIB)
+$(NAME): $(TESTCOMPILE_FILES) $(LIB)
 	@$(call FNC_PRINT_EQUAL,$(PARENTNAME)-$(NAME),$(NAME))
 	@$(CC) -coverage $(CCFLAGS) -o $(NAME) $(TESTOBJS) $(LIBOBJS) $(LIBS)
 	#-Wl,-alias,_wrap_malloc,_malloc -Wl,-alias,_wrap_free,_free
 
-# Compile .o
-%.o: %.c $(HEADERS)
+# Include all existing header dependencies files
+include $(wildcard $(DEPS))
+
+# Compile .o or .d
+%.o %.d: %.c
 ifeq ($(CCSILENT), FALSE)
 	@$(call FNC_PRINT_PLUS,$(PARENTNAME)-$(NAME),$(@:src/%=%))
 endif
-	@$(CC) $(CCFLAGS) -o $@ -c $<
+	@$(CC) -MMD $(CCFLAGS) -o $@ -c $<
 
 # Create $(LIB)
 $(LIB):
@@ -86,9 +92,9 @@ $(LIB):
 
 # Clean all non $(NAME) files
 clean:
-ifneq ($(wildcard $(TESTOBJS) $(TEMPS)),)
+ifneq ($(wildcard $(TESTCLEAN_FILES)),)
 	@$(call FNC_PRINT_MIN,$(PARENTNAME)-$(NAME),clean)
-	@rm -f $(TESTOBJS) $(TEMPS)
+	@rm -f $(TESTCLEAN_FILES)
 endif
 
 # Clean $(NAME) files
