--- a/src/Makefile.map_parseSrcs
+++ b/src/Makefile.map_parseSrcs
@@ -14,16 +14,14 @@ CCFLAGS +=
 # Source file prefix
 PREFIX =
 
-# All ft_ source files for the sublib (relative to src/$(SRCFOLDER)/)
-# These will be automaticly prefixed with ft_ and sufixed with .c
-FT_SRCS =
-
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = write_struct read_struct add_type add_char add_short add_int add_long \
-		add_float add_double read_short read_char read_int read_long \
-		read_float read_double finish_bin add_string read_string add_list_gen \
-		read_list_gen detect_endian swap_bytes new_binary del_binary \
-		del_binary_read new_binary_read read_header \
-		write_settings read_settings \
-		read_wad_header
+WAD_SRCS = parse_wad
+WAD_SRCS := $(WAD_SRCS:%=WAD/%)
+
+MAP_SRCS =
+MAP_SRCS := $(MAP_SRCS:%=MAP/%)
+
+SRCS = parse_map \
+		$(WAD_SRCS) \
+		$(MAP_SRCS)
