--- a/src/Makefile.sdl_extraSrcs
+++ b/src/Makefile.sdl_extraSrcs
@@ -23,4 +23,4 @@ SRCS =	merge_surface merge_surface_alpha \
 		merge_surface_repeat merge_surface_alpha_repeat \
 		create_surface_default clear_surface \
 		fill_surface_color has_surface_alpha set_surface_alpha \
-		set_surface_color
+		set_surface_color scale_index
